// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyncErrorMessage > should handle retry 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="ring-focus group/inner relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
      data-discover="true"
      data-ring-focus-margin="-m-1"
      data-testid="RouterLink"
      href="/"
    >
      <span
        class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
      >
        here
      </span>
      <div
        class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
        data-testid="RouterLink__external"
      >
        <div
          style="height: 12px; width: 12px;"
        >
          <svg
            id="arrow-external"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render multiple failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <strong>
      ARK Mainnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      Lisk Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="ring-focus group/inner relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
      data-discover="true"
      data-ring-focus-margin="-m-1"
      data-testid="RouterLink"
      href="/"
    >
      <span
        class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
      >
        here
      </span>
      <div
        class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
        data-testid="RouterLink__external"
      >
        <div
          style="height: 12px; width: 12px;"
        >
          <svg
            id="arrow-external"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render one failed network 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="ring-focus group/inner relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
      data-discover="true"
      data-ring-focus-margin="-m-1"
      data-testid="RouterLink"
      href="/"
    >
      <span
        class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
      >
        here
      </span>
      <div
        class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
        data-testid="RouterLink__external"
      >
        <div
          style="height: 12px; width: 12px;"
        >
          <svg
            id="arrow-external"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </a>
  </span>
   to retry.
</div>
`;

exports[`SyncErrorMessage > should render two failed networks 1`] = `
<div>
  There has been a network problem on 
  <span>
    <strong>
      ARK Devnet
    </strong>
    , 
  </span>
  <span>
    <span>
       
      and
       
    </span>
    <strong>
      ARK Mainnet
    </strong>
  </span>
   while trying to retrieve your wallet information and as a result, your data could be out of sync or incorrect. Click 
  <span
    data-testid="SyncErrorMessage__retry"
  >
    <a
      class="ring-focus group/inner relative inline-block cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700"
      data-discover="true"
      data-ring-focus-margin="-m-1"
      data-testid="RouterLink"
      href="/"
    >
      <span
        class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
      >
        here
      </span>
      <div
        class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
        data-testid="RouterLink__external"
      >
        <div
          style="height: 12px; width: 12px;"
        >
          <svg
            id="arrow-external"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </a>
  </span>
   to retry.
</div>
`;
